--- a/datacamp/Data Analyst in Databricks/0002.Introduction To Databricks.md
+++ b/datacamp/Data Analyst in Databricks/0002.Introduction To Databricks.md
@@ -137,4 +137,19 @@ This guide covers the foundational ideas from the transcript. Practice by:
 - Creating a small cluster.
 - Uploading sample CSV/Parquet → make Delta table → query it.
 
-Let me know if you'd like deeper examples, SQL snippets, or focus on any specific part!
+### Key Differences (Databricks Context -- Most Relevant Match)
+
+-   **Account Admin** (higher-level / organization-wide):
+    -   Controls the full Databricks **account** (often 1:1 with a company/org)
+    -   Can create, update, or delete **workspaces**
+    -   Manages account-level identity (users/groups/service principals, SSO, SCIM provisioning)
+    -   Configures cloud resources, Unity Catalog/metastores, billing/usage monitoring
+    -   Assigns roles (including promoting others to Account Admin or Workspace Admin)
+    -   Analogy: "Owns/controls the entire building"
+-   **Workspace Admin** (lower-level / workspace-specific):
+    -   Has admin privileges **only inside one workspace**
+    -   Manages users/groups **within that workspace**
+    -   Controls workspace settings (clusters, jobs, notebooks, libraries, access controls, previews)
+    -   Can assign Workspace Admin role to others in the same workspace
+    -   Cannot touch account-level things like creating new workspaces or cross-workspace configs
+    -   Analogy: "Manages the rooms/furniture inside one workspace/building"
