--- a/datacamp/Data Analyst in Databricks/0003.Data Intelligence Platform - Introduction To Databricks.md
+++ b/datacamp/Data Analyst in Databricks/0003.Data Intelligence Platform - Introduction To Databricks.md
@@ -134,6 +134,8 @@ Databricks SQL turns the lakehouse into a full **data warehouse** experience.
 - **Analytics** → Notebooks, SQL Editor, any language, Databricks SQL + Photon.
 - **Architecture pattern** → Medallion (Bronze → Silver → Gold).
 
-This covers the full introductory course. Practice in a Databricks workspace — create a catalog, upload data, make Delta tables, run SQL, spin up clusters. That hands-on part locks it in!
+---
 
-Let me know if you want deeper examples on any section (e.g., medallion in code, cluster creation steps). Good luck — you've got this! 🚀
+In the Databricks Catalog Explorer exercise, you're a data engineer dealing with many daily requests to check different datasets. Previously, you had to write code every single time to load and explore each dataset one by one, which was slow and repetitive. Now, with Catalog Explorer, you get a simple, centralized UI where you can instantly browse catalogs, open any table (like the nyctaxi.trips sample), and see preview rows of **sample data**, column names, stats, permissions, and more — all without writing or running any code.  
+
+The simple correct answer is: **Ability to see sample data for a particular table.** This is one of the main benefits because it lets you quickly understand and explore data visually, saving a lot of time compared to your old programmatic approach.
