--- a/datacamp/Data Analyst in Databricks/0003.Data Intelligence Platform - Introduction To Databricks.md
+++ b/datacamp/Data Analyst in Databricks/0003.Data Intelligence Platform - Introduction To Databricks.md
@@ -139,3 +139,35 @@ Databricks SQL turns the lakehouse into a full **data warehouse** experience.
 In the Databricks Catalog Explorer exercise, you're a data engineer dealing with many daily requests to check different datasets. Previously, you had to write code every single time to load and explore each dataset one by one, which was slow and repetitive. Now, with Catalog Explorer, you get a simple, centralized UI where you can instantly browse catalogs, open any table (like the nyctaxi.trips sample), and see preview rows of **sample data**, column names, stats, permissions, and more — all without writing or running any code.  
 
 The simple correct answer is: **Ability to see sample data for a particular table.** This is one of the main benefits because it lets you quickly understand and explore data visually, saving a lot of time compared to your old programmatic approach.
+
+---
+
+In the Databricks exercise on **Configuring clusters**, the central IT team wants to control cluster creation through **cluster policies** — rules that limit what settings different groups (like data engineering) can choose when spinning up clusters. This helps enforce consistency, control costs, and improve security/compliance.
+
+When you create or configure a cluster in Databricks (via UI, API, or policy), these are **valid, common options** you can set or restrict:
+- **Databricks Runtime** → Choose the version (e.g., latest LTS for stability + optimized Spark/Photon).
+- **Auto-termination time** → Set minutes of inactivity before the cluster automatically stops (e.g., 20–120 min) to avoid idle costs.
+- **Node instance types** → Pick driver/worker machine types (e.g., memory-optimized, compute-optimized, GPU, spot instances) to match workload needs and budget.
+
+These appear in the cluster creation screen and can be enforced/limited via policies (e.g., force a specific runtime or cap max workers).
+
+However, **Cluster monthly budget** is **not** a valid per-cluster configuration. There is no field or policy attribute to set a "monthly budget" directly on an individual cluster. Budgets exist at the **account level** (track total spending, set alerts when nearing a monthly amount in USD) or for serverless usage tagging — but they don't apply as a hard limit during cluster setup. Policies can indirectly control cost (by limiting instance types, max workers, etc.), but not with a flat monthly dollar cap per cluster.
+
+**The invalid option (the one that's NOT a valid cluster configuration) is:**  
+**Cluster monthly budget**.
+
+This fits the scenario: IT is asking for real configs you can actually enforce in policies — runtime, auto-termination, and node types are all standard and restrictable, but monthly budget isn't one of them. 
+
+---
+
+In the Databricks exercise on **Development on Databricks**, you're leading a cross-functional team at Sierra Publishing, and each member has their preferred workflow they want to keep similar while transitioning to the platform. The goal is to recommend the best development UI in Databricks — prioritizing direct work inside the platform — by dragging people/scenarios into the right "bucket": **Databricks Notebooks**, **SQL Editor**, or **Databricks Connect**.
+
+- **Databricks Notebooks** (multi-language interactive environment, enhanced Jupyter-style): Best for flexible, exploratory, or mixed-language work. Use this for Sally (who has Python scripts to migrate — notebooks support Python natively with great visualization/collaboration) and Carlos (developing a model in R — notebooks fully support R for data science/statistics workflows, including model building).
+
+- **SQL Editor** (purpose-built for SQL queries, familiar warehouse feel): Ideal for pure SQL-focused tasks. Tina (several queries to answer business questions) and Tom (who has created tables using SQL) fit here — it offers fast ad-hoc querying, visualization, and a clean interface without needing code cells.
+
+- **Databricks Connect** (connects local IDEs like VS Code, PyCharm, or RStudio to Databricks compute): Perfect when someone wants to stay in their favorite external tool. Julie (loves RStudio and wants to keep using it) and Amrinder (has testing frameworks built into his VS Code environment) belong here — Connect lets them run code/tests locally but execute on Databricks clusters for big data power, blending familiarity with platform scale.
+
+The key idea is matching workflows to tools that feel similar while encouraging platform use: notebooks for interactive/multi-language dev (Python/R/SQL mix), SQL Editor for analyst-style querying, and Connect for IDE loyalists. This setup helps the team adopt Databricks smoothly without big disruptions. (Note: Your earlier attempt placed Carlos in notebooks correctly, as R model development is a classic notebook use case — avoid putting him elsewhere!) 
+
+---
