--- a/datacamp/Data Analyst in Databricks/0005.Introduction To Databricks SQL.md
+++ b/datacamp/Data Analyst in Databricks/0005.Introduction To Databricks SQL.md
@@ -183,7 +183,66 @@ SELECT ... FROM ...
   GROUP BY ... HAVING ...
   WINDOW (...) OVER (PARTITION BY ... ORDER BY ...)
 ```
+No, **Database**, **Data Warehouse**, and **Data Lake** are **not** the only three architectures used in data engineering.  
 
-Study tip: Practice the flow **Bronze → Silver → Gold → Dashboard** on any dataset — it is the heart of the whole platform.
+These three were the classic foundations for many years, but modern data engineering (especially from ~2020 onward, and even more in 2025–2026) has evolved a lot. Several newer paradigms and hybrid approaches now exist to solve real problems like cost, performance, AI/ML workloads, real-time needs, governance across teams, and handling massive/unstructured data.
 
-Good luck with Databricks SQL — once you get comfortable with medallion + SQL Warehouse + dashboards, it becomes very powerful and fun! ☕
+Here is a clear, human-friendly breakdown — think of it as a "family tree" of data storage & processing architectures used today in data engineering.
+
+### Classic / Traditional Ones (Still Very Much Used)
+1. **Relational Database** (OLTP-focused)  
+   → Think MySQL, PostgreSQL, Oracle, SQL Server  
+   → Purpose: Fast transactions, real-time operations (apps, websites, order entry)  
+   → Strengths: ACID, quick reads/writes for small sets  
+   → Weakness: Not built for analytics on huge volumes
+
+2. **Data Warehouse**  
+   → Think Snowflake, BigQuery, Redshift, Synapse  
+   → Purpose: Structured BI reporting, dashboards, historical analysis  
+   → Strengths: Great SQL performance, governance, star/snowflake schemas  
+   → Weakness: Expensive for raw/unstructured data or ML
+
+3. **Data Lake**  
+   → Think S3 + Spark/Hadoop, ADLS, GCS  
+   → Purpose: Store everything cheaply (raw JSON, images, logs, Parquet…)  
+   → Strengths: Low cost, schema-on-read, good for data science  
+   → Weakness: "Data swamp" risk — poor governance, slow BI queries
+
+### Modern / Evolving Ones (Very Common in 2025–2026)
+4. **Data Lakehouse** (the biggest new kid on the block)  
+   → Think Databricks (Delta Lake), Snowflake with Iceberg support, Dremio, Starburst + Iceberg/Hudi  
+   → What it is: Data Lake storage + Warehouse-like features (ACID, schema enforcement, fast SQL, governance, time travel)  
+   → Why popular: One system for BI + ML + streaming, cheaper than pure warehouse, avoids copying data twice  
+   → When used: Companies wanting analytics + AI on the same platform without two separate systems
+
+5. **Data Mesh**  
+   → Not really a "storage" technology — more an **organizational + architectural philosophy**  
+   → Core idea: Treat data as a product → owned by business domains (e.g., marketing owns customer data product, finance owns revenue data product)  
+   → Decentralized ownership + self-serve platform  
+   → Strengths: Scales to huge organizations, better data quality & relevance  
+   → Weakness: Needs strong culture & governance — hard to implement  
+   → Often combined with Lakehouse (Lakehouse as the tech foundation, Mesh as the operating model)
+
+6. **Data Fabric**  
+   → Think automated metadata layer + integration (e.g., tools like IBM, Informatica, Talend, or modern ones like Atlan + query engines)  
+   → Core idea: Intelligent layer that connects everything (lakes, warehouses, databases, SaaS apps) without moving data → "zero-copy" access  
+   → Strengths: Real-time federation, strong governance across hybrid/multi-cloud  
+   → When used: Very large enterprises with data spread everywhere (on-prem + multiple clouds)
+
+### Other Important Patterns You See in Real Projects
+- **Streaming-first / Kappa Architecture** → Kafka + Flink/Spark Streaming → real-time everything (no big batch delay)
+- **Modern Data Stack (MDS)** → Fivetran + dbt + Snowflake/BigQuery + Looker/Tableau + Airflow → very popular for mid-size companies
+- **NoSQL + Polyglot Persistence** → MongoDB/Cassandra for unstructured, Neo4j for graphs, Redis for caching
+- **Semantic Layer** (on top of anything) → dbt Semantic Layer, AtScale, Stardog → consistent metrics across tools
+
+### Quick Comparison Table (2025–2026 Reality)
+
+| Architecture       | Best For                              | Cost       | Governance | BI Speed | ML/AI Friendly | Real-time | Organization Style |
+|---------------------|---------------------------------------|------------|------------|----------|----------------|-----------|--------------------|
+| Relational DB      | Transactions, apps                    | Medium     | Excellent  | Medium   | Low            | Yes       | Centralized       |
+| Data Warehouse     | Structured BI & reporting             | High       | Excellent  | Very fast| Medium         | Limited   | Centralized       |
+| Data Lake          | Raw storage, data science             | Low        | Poor–Medium| Slow     | High           | Possible  | Centralized       |
+| **Data Lakehouse** | BI + ML + streaming in one place      | Medium     | Good–Excellent | Fast   | Very High      | Yes       | Centralized–Hybrid|
+| **Data Mesh**      | Large orgs, domain-owned data products| Varies     | Federated  | Varies   | High           | Varies    | Decentralized     |
+| **Data Fabric**    | Connect everything without moving it  | Medium–High| Excellent  | Fast     | High           | Yes       | Federated access  |
+
