--- a/datacamp/Data Analyst in Databricks/0005.Introduction To Databricks SQL.md
+++ b/datacamp/Data Analyst in Databricks/0005.Introduction To Databricks SQL.md
@@ -246,3 +246,255 @@ Here is a clear, human-friendly breakdown — think of it as a "family tree" of 
 | **Data Mesh**      | Large orgs, domain-owned data products| Varies     | Federated  | Varies   | High           | Varies    | Decentralized     |
 | **Data Fabric**    | Connect everything without moving it  | Medium–High| Excellent  | Fast     | High           | Yes       | Federated access  |
 
+---
+
+Yes — in the Databricks SQL course (and across the entire **Databricks Lakehouse** platform), they frequently talk about the **Bronze**, **Silver**, and **Gold** layers.
+
+This is called the **Medallion Architecture** (also sometimes called "multi-hop architecture").  
+
+It's a simple, step-by-step way to organize and improve your data quality as it moves from "raw mess" → "clean and usable" → "ready for business decisions and reports".
+
+Think of it like refining metal:  
+- **Bronze** = raw ore straight from the ground (ugly but complete)  
+- **Silver** = cleaned, polished, and shaped (much better quality)  
+- **Gold** = final valuable product ready to sell/use (highest trust & value)
+
+### Why Use Medallion Layers? (The Real-World Reason)
+
+Most companies get data from many messy sources (CSV files, databases, APIs, logs, IoT…).  
+If you dump everything raw into one big table and try to analyze it → chaos (data swamps, broken reports, wrong business decisions).
+
+Medallion fixes this by processing data **incrementally** in clear stages:  
+- Keep history & traceability (audit trail)  
+- Improve quality step-by-step  
+- Make BI/dashboards fast & reliable  
+- Support both analysts (SQL) and data scientists/ML
+
+### The Three Layers – Easy Breakdown
+
+| Layer      | Nickname       | What it contains                              | What happens here (typical tasks)                          | Who uses it mainly?                  | Data Quality / Trust Level | Example Table Name (in Unity Catalog) |
+|------------|----------------|-----------------------------------------------|-------------------------------------------------------------|--------------------------------------|----------------------------|---------------------------------------|
+| **Bronze** | Raw            | Exact copy of source data (as-is)             | Just ingestion – load files/streams into Delta tables. No cleaning. Keep original format, timestamps, file names if possible. | Data engineers (ingestion pipelines) | Low – "source of truth" but messy | `bronze.coffee_sales_raw` or `ops.bronze.sales` |
+| **Silver** | Cleaned / Analytical | Cleaned, standardized, joined data            | Remove NULLs/duplicates, fix data types, standardize values (e.g. upper-case names), join related sources, apply basic business rules, handle schema evolution. | Analysts + some data engineers       | Medium – "enterprise view" reliable for analysis | `silver.coffee_sales_clean` or `analytics.silver.customers` |
+| **Gold**   | BI-ready / Curated | Aggregated, business-focused, report-ready    | Group by dimensions, calculate KPIs/metrics, drop unnecessary columns, create denormalized views/tables for specific reports/dashboards, enrich with business logic. | BI users, executives, dashboards, ML models | High – trusted for decisions        | `gold.quarterly_revenue_by_store` or `bi.gold.sales_kpi` |
+
+### How Data Flows (The Typical Pipeline)
+
+1. **Ingest** raw files/streams → **Bronze** tables (use `COPY INTO`, Auto Loader / `cloud_files`, Lakeflow Connect…)
+2. **Transform** Bronze → **Silver** (SQL queries or Spark jobs: clean, join, enrich)
+3. **Aggregate** Silver → **Gold** (more SQL: group by, sum/avg/count, create views/materialized views)
+4. **Consume** Gold in Databricks SQL: queries, visualizations, dashboards, or connect to Power BI/Tableau
+
+**Real example from the coffee sales course scenario**:
+
+- Bronze: Raw CSV/Parquet files of sales, stores, products → ingested as-is
+- Silver: Joined sales + stores + products, cleaned payment types, removed duplicates, fixed dates
+- Gold: Aggregated revenue by store/quarter/product category, with inventory status flags → perfect for bar charts & executive dashboards
+
+### Quick Tips from the Course Style
+
+- Most analysis & visualizations should run on **Gold** data (fastest & cleanest).
+- Use **Delta tables** in all layers (supports ACID, time travel, optimization).
+- Automate the flow with **Databricks Workflows** (schedule Bronze → Silver → Gold jobs).
+- You can add more layers if needed (e.g., "Platinum" for ML features), but Bronze-Silver-Gold is the standard starting point.
+- In Unity Catalog: Put layers in different schemas (e.g., `bronze.`, `silver.`, `gold.`) for clear organization.
+
+### Simple Visual Flow (Imagine This Diagram)
+
+```
+Source systems
+   ↓ (ingest raw)
+Bronze layer  ──►  Silver layer  ──►  Gold layer
+(raw data)        (cleaned & joined)     (aggregated & BI-ready)
+   ↓                                       ↓
+Data engineers                           Dashboards + BI tools
+```
+
+This pattern makes everything traceable (you can always go back to Bronze if something breaks), scalable, and much easier to maintain than dumping everything in one place.
+
+---
+
+Here are practical, copy-paste-ready **sample SQL queries** that exactly follow the **Medallion Architecture** (Bronze → Silver → Gold) pattern shown in the Databricks SQL course — using the coffee sales / insurance-like datasets as examples.
+
+These are written in the style you would see in Databricks SQL Editor or notebooks.  
+They assume Unity Catalog is enabled and you're working in a catalog like `my_company` with schemas `bronze`, `silver`, `gold`.
+
+### 1. Bronze Layer – Raw Ingestion (Just Load – No Cleaning)
+
+```sql
+-- Example 1: One-time bulk load from cloud storage (Parquet files)
+COPY INTO bronze.sales_raw
+FROM 'abfss://container@storageaccount.dfs.core.windows.net/sales/*.parquet'
+FILEFORMAT = PARQUET
+FORMAT_OPTIONS ('mergeSchema' = 'true');
+
+-- Example 2: Streaming / Auto Loader for new files arriving continuously
+CREATE OR REFRESH STREAMING LIVE TABLE bronze.sales_streaming
+COMMENT 'Raw sales data arriving daily'
+AS SELECT *, 
+       current_timestamp() AS ingestion_time,
+       input_file_name()   AS source_file
+  FROM cloud_files('abfss://container@storageaccount.dfs.core.windows.net/new-sales/', 'csv', 
+                   map('header', 'true', 'inferSchema', 'true'));
+
+-- Example 3: Simple GUI upload → already created table (you just reference it)
+-- No code needed — table already exists as bronze.insurance_claims_raw
+```
+
+### 2. Silver Layer – Cleaning & Standardizing
+
+```sql
+-- Silver: Cleaned & enriched sales data
+CREATE OR REPLACE TABLE silver.sales_cleaned
+COMMENT 'Cleaned, standardized sales data ready for analysis'
+AS
+SELECT 
+  -- Keep IDs as-is
+  order_id,
+  store_id,
+  product_id,
+  customer_id,
+  
+  -- Clean & standardize dates
+  CAST(order_date AS DATE) AS order_date,
+  DATE_TRUNC('day', order_timestamp) AS order_day,
+  
+  -- Clean amounts (remove NULLs, round, fix negatives)
+  COALESCE(ABS(CAST(total_amount AS DECIMAL(12,2))), 0.00) AS revenue,
+  COALESCE(quantity, 0) AS quantity_sold,
+  
+  -- Standardize categories (business rules)
+  UPPER(TRIM(product_category)) AS product_category_clean,
+  CASE 
+    WHEN payment_type IN ('credit card', 'cc', 'visa', 'mastercard') THEN 'Credit Card'
+    WHEN payment_type IN ('cash', 'Cash') THEN 'Cash'
+    ELSE 'Other'
+  END AS payment_method_clean,
+  
+  -- Add useful derived columns
+  revenue / NULLIF(quantity, 0) AS avg_price_per_unit,
+  current_timestamp() AS last_cleaned_at
+
+FROM bronze.sales_raw
+
+-- Remove obvious bad rows
+WHERE order_id IS NOT NULL
+  AND revenue >= 0
+  AND quantity >= 0
+
+-- Deduplicate (keep latest version if duplicates exist)
+QUALIFY ROW_NUMBER() OVER (PARTITION BY order_id ORDER BY ingestion_time DESC) = 1;
+```
+
+```sql
+-- Silver: Cleaned insurance claims example
+CREATE OR REPLACE TABLE silver.claims_clean
+AS
+SELECT 
+  claim_id,
+  policy_id,
+  customer_id,
+  employee_id,
+  CAST(incident_date AS DATE) AS incident_date,
+  CAST(report_date   AS DATE) AS report_date,
+  COALESCE(claim_amount, 0)   AS claim_amount,
+  UPPER(claim_type)           AS claim_type_clean,
+  CASE 
+    WHEN claim_status IN ('APPROVED', 'Approved') THEN 'Approved'
+    WHEN claim_status IN ('DENIED', 'Rejected')   THEN 'Denied'
+    ELSE 'Pending'
+  END AS claim_status_clean,
+  -- Remove fraud-like outliers (business rule example)
+  claim_amount <= 1000000 AS is_reasonable_amount
+
+FROM bronze.insurance_claims_raw
+
+WHERE claim_id IS NOT NULL
+  AND claim_amount >= 0;
+```
+
+### 3. Gold Layer – Aggregated & BI-Ready
+
+```sql
+-- Gold: Sales performance by store & quarter
+CREATE OR REPLACE VIEW gold.quarterly_sales_performance
+COMMENT 'BI-ready: Revenue, units, avg price by store & quarter'
+AS
+SELECT 
+  DATE_TRUNC('quarter', s.order_date)          AS fiscal_quarter,
+  st.store_id,
+  st.store_name,
+  st.region,
+  s.product_category_clean,
+  
+  COUNT(*)                                     AS total_transactions,
+  SUM(s.quantity_sold)                         AS total_units_sold,
+  SUM(s.revenue)                               AS total_revenue,
+  ROUND(AVG(s.revenue), 2)                     AS avg_revenue_per_transaction,
+  ROUND(SUM(s.revenue) / NULLIF(SUM(s.quantity_sold), 0), 2) AS avg_price_per_unit,
+
+  -- Inventory health flag (example business logic)
+  CASE 
+    WHEN SUM(s.quantity_sold) > 1000 THEN 'High Demand'
+    WHEN SUM(s.quantity_sold) BETWEEN 300 AND 1000 THEN 'Medium Demand'
+    ELSE 'Low Demand'
+  END AS demand_category
+
+FROM silver.sales_cleaned s
+JOIN silver.stores_clean  st ON s.store_id = st.store_id
+
+GROUP BY 
+  fiscal_quarter, 
+  st.store_id, st.store_name, st.region, 
+  s.product_category_clean
+
+HAVING total_revenue > 0;   -- filter out empty quarters
+```
+
+```sql
+-- Gold: Insurance – Large claims per employee (for bonus calculation)
+CREATE OR REPLACE VIEW gold.large_claims_by_employee
+AS
+WITH large_claims AS (
+  SELECT 
+    employee_id,
+    COUNT(*) AS large_claim_count,
+    SUM(claim_amount) AS total_large_claim_amount
+  FROM silver.claims_clean
+  WHERE claim_amount > 1000
+    AND claim_status_clean = 'Approved'
+  GROUP BY employee_id
+)
+SELECT 
+  e.employee_id,
+  e.employee_name,
+  e.department,
+  COALESCE(l.large_claim_count, 0)         AS large_claims_count,
+  COALESCE(l.total_large_claim_amount, 0)  AS total_large_claims_amount,
+  RANK() OVER (ORDER BY l.large_claim_count DESC) AS claims_rank
+
+FROM silver.employees_clean e
+LEFT JOIN large_claims l ON e.employee_id = l.employee_id
+
+ORDER BY large_claims_count DESC;
+```
+
+### 4. Bonus: Optimize & Z-Order (After Creating Tables)
+
+```sql
+-- After loading lots of data – compact small files & speed up queries
+OPTIMIZE silver.sales_cleaned ZORDER BY (order_date, store_id, product_category_clean);
+
+OPTIMIZE gold.quarterly_sales_performance ZORDER BY (fiscal_quarter, store_id);
+```
+
+### Quick Workflow Summary (Run in This Order)
+
+1. Ingest raw → Bronze (COPY INTO or streaming table)
+2. Clean & standardize → Silver (CREATE TABLE … AS SELECT … with cleaning logic)
+3. Aggregate & enrich → Gold (CREATE VIEW or MATERIALIZED VIEW … with GROUP BY & business metrics)
+4. Optimize tables for speed
+5. Use Gold tables/views in your queries, visualizations, and dashboards
+
+---
+
