--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -1,4 +1,104 @@
-Let's go! 🚀
+Great call — let's zoom out first. Understanding the *why* behind Scala makes the code make much more sense.
+
+---
+
+## What is Scala?
+
+Scala stands for **Scalable Language**. It was created by **Martin Odersky** at EPFL (Switzerland) and released in **2003**. It runs on the **JVM (Java Virtual Machine)**, which means it compiles to the same bytecode as Java and can use any Java library natively.
+
+Think of it as Java, but redesigned from the ground up to be more expressive, concise, and powerful.
+
+---
+
+## Why Was Scala Created?
+
+Odersky was frustrated with Java's verbosity and limitations. He wanted a language that unified two programming paradigms that were traditionally separate:
+
+**Object-Oriented Programming (OOP)** — everything is an object, like Java or Python.
+
+**Functional Programming (FP)** — functions are first-class citizens, immutability is preferred, side effects are minimized.
+
+Scala does both simultaneously, which is rare and powerful.
+
+---
+
+## Where is Scala Used?
+
+This is the most important part for your Capital One prep:
+
+**Big Data / Data Engineering** — This is Scala's biggest domain. Apache Spark was written entirely in Scala. When you write PySpark, Python is just a wrapper — the actual execution engine underneath is Scala. So when you write Spark in Scala, you're working directly with the native API, which means better performance and access to features that sometimes lag in PySpark.
+
+**Financial Services** — Companies like Morgan Stanley, Goldman Sachs, Barclays, and yes, **Capital One** use Scala heavily for high-performance backend systems, risk engines, and data pipelines. The JVM gives them the reliability and performance Java is known for, while Scala gives them cleaner, more maintainable code.
+
+**Distributed Systems** — Akka, a powerful toolkit for building concurrent and distributed applications, is built in Scala. Twitter, LinkedIn, and Netflix have used it extensively.
+
+**Streaming** — Kafka Streams and Apache Flink have strong Scala APIs. Since Kafka is also on your prep list, this connection matters.
+
+**Web Backend** — The Play Framework is a popular Scala web framework, though this is less relevant for your role.
+
+---
+
+## Scala vs Java vs Python — How They Compare
+
+Java is verbose and strict. You write a lot of boilerplate to do simple things. It's rock solid and everywhere in enterprise.
+
+Python is concise and readable but slow for heavy computation, and it's dynamically typed so errors show up at runtime rather than compile time.
+
+Scala sits in the middle — concise like Python, fast and type-safe like Java. Here's a simple example showing the same logic in all three:
+
+```java
+// Java — very verbose
+public int add(int a, int b) {
+    return a + b;
+}
+```
+
+```python
+# Python — clean and simple
+def add(a, b):
+    return a + b
+```
+
+```scala
+// Scala — concise AND type-safe
+def add(a: Int, b: Int): Int = a + b
+```
+
+---
+
+## Key Characteristics of Scala You'll Hear About
+
+**Statically typed** — types are checked at compile time, not runtime. This catches bugs early, which is why financial companies love it.
+
+**Type inference** — even though it's statically typed, you rarely have to declare types. Scala figures it out.
+
+**Immutability by default** — the language encourages you not to change data, which makes distributed computing much safer. This is why Spark embraces it.
+
+**Concise** — Scala code is typically 2-3x shorter than equivalent Java code doing the same thing.
+
+**Interoperable with Java** — you can use any Java library in Scala without any wrappers or adapters.
+
+**Strongly backed by the ecosystem** — SBT (Simple Build Tool) is Scala's build tool, similar to Maven or Gradle in Java.
+
+---
+
+## Scala in the Context of Your Capital One Role
+
+When the job description says Scala, they almost certainly mean **Scala + Spark**. Data engineers at companies like Capital One use Scala to:
+
+Write Spark jobs that process billions of transactions, build and maintain data pipelines that feed ML models, optimize performance-critical ETL processes where PySpark would be too slow, and work with streaming data coming through Kafka.
+
+Your PySpark experience is a genuine asset here. The mental model is identical — you already understand DataFrames, transformations, actions, and lazy evaluation. You're essentially just learning new syntax for concepts you already know.
+
+---
+
+## One Important Thing to Know
+
+Scala has a reputation for being **hard to learn**. That reputation is partly deserved — its advanced type system and functional programming features can get deeply complex. But for data engineering purposes, you don't need the deep end. You need maybe 30% of the language to be highly effective with Spark, and that 30% is very approachable, especially coming from Python.
+
+---
+
+Ready to get back into the code now that you have the full picture? We were just getting into higher-order functions and pattern matching — the exact features you'll use constantly in Spark jobs. 🎯
 
 ---
 
