--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -286,3 +286,189 @@ println(result)
 ```
 
 ---
+
+
+# Pattern Matching
+
+Think of it as a **supercharged switch statement** — but way more powerful than anything you've seen in Python or Java.
+
+---
+
+## Basic Syntax
+
+```scala
+val day = "Monday"
+
+val result = day match {
+  case "Monday"  => "Start of the work week"
+  case "Friday"  => "Almost weekend!"
+  case "Sunday"  => "Rest day"
+  case _         => "Just another day"  // default — like else
+}
+
+println(result)  // Start of the work week
+```
+
+The `_` is the **wildcard** — it catches anything that didn't match above. Always put it last.
+
+---
+
+## Matching on Types
+
+This is where it gets powerful for data engineering — handling multiple data types coming through a pipeline:
+
+```scala
+def describe(x: Any): String = x match {
+  case i: Int     => s"Integer: $i"
+  case s: String  => s"String: $s"
+  case d: Double  => s"Double: $d"
+  case b: Boolean => s"Boolean: $b"
+  case _          => "Unknown type"
+}
+
+println(describe(42))       // Integer: 42
+println(describe("Scala"))  // String: Scala
+println(describe(3.14))     // Double: 3.14
+println(describe(true))     // Boolean: true
+```
+
+Imagine data coming in from Kafka with mixed types — this pattern lets you handle each type cleanly in one block.
+
+---
+
+## Matching with Conditions (Guards)
+
+You can add `if` conditions inside your cases:
+
+```scala
+def classify(score: Int): String = score match {
+  case s if s >= 90 => "A"
+  case s if s >= 80 => "B"
+  case s if s >= 70 => "C"
+  case s if s >= 60 => "D"
+  case _            => "F"
+}
+
+println(classify(95))  // A
+println(classify(72))  // C
+println(classify(45))  // F
+```
+
+Compare this to Python:
+```python
+# Python way — works but not as elegant
+if score >= 90:
+    return "A"
+elif score >= 80:
+    return "B"
+# ...and so on
+```
+
+---
+
+## Matching on Case Classes (Very Important for Spark)
+
+This is the real power. First, what is a **case class**?
+
+```scala
+// A case class is like a data container — similar to Python dataclass
+case class Transaction(id: String, amount: Double, status: String)
+
+val t1 = Transaction("T001", 5000.00, "approved")
+val t2 = Transaction("T002", 15000.00, "flagged")
+val t3 = Transaction("T003", 200.00, "declined")
+```
+
+Now pattern match on it:
+
+```scala
+def processTransaction(t: Transaction): String = t match {
+  case Transaction(id, amount, "approved") if amount > 10000 =>
+    s"$id: Large approved transaction — flag for review"
+  case Transaction(id, amount, "approved") =>
+    s"$id: Normal approved transaction of $$$amount"
+  case Transaction(id, _, "flagged") =>
+    s"$id: ALERT — flagged transaction!"
+  case Transaction(id, _, "declined") =>
+    s"$id: Declined — notify customer"
+  case _ =>
+    "Unknown transaction state"
+}
+
+println(processTransaction(t1))  // T001: Normal approved transaction of $5000.0
+println(processTransaction(t2))  // T002: Large approved transaction — flag for review
+println(processTransaction(t3))  // T003: Declined — notify customer
+```
+
+Notice how this reads almost like **business rules** — which is exactly how Capital One would use this in a transaction processing pipeline.
+
+---
+
+## Matching on Collections
+
+```scala
+def describeList(lst: List[Int]): String = lst match {
+  case Nil          => "Empty list"
+  case x :: Nil     => s"One element: $x"
+  case x :: y :: Nil => s"Two elements: $x and $y"
+  case x :: rest    => s"Starts with $x, has ${rest.length} more elements"
+}
+
+println(describeList(List()))         // Empty list
+println(describeList(List(1)))        // One element: 1
+println(describeList(List(1, 2)))     // Two elements: 1 and 2
+println(describeList(List(1,2,3,4)))  // Starts with 1, has 3 more elements
+```
+
+The `::` operator is called **cons** — it splits a list into head and tail. Very common in Scala.
+
+---
+
+## Real World Data Engineering Example
+
+Putting it all together — imagine you're processing Capital One transaction records:
+
+```scala
+case class Transaction(id: String, amount: Double, 
+                       category: String, country: String)
+
+def riskScore(t: Transaction): String = t match {
+  case Transaction(_, amount, _, country) 
+    if amount > 50000 && country != "US" =>
+      "HIGH RISK — large foreign transaction"
+      
+  case Transaction(_, amount, "gambling", _) 
+    if amount > 1000 =>
+      "MEDIUM RISK — large gambling transaction"
+      
+  case Transaction(_, _, _, country) 
+    if country != "US" =>
+      "LOW RISK — foreign transaction"
+      
+  case _ => 
+    "NORMAL"
+}
+```
+
+This is clean, readable, and exactly the kind of logic you'd write in a Spark job processing millions of transactions.
+
+---
+
+## Quick Exercise
+
+What does this print?
+
+```scala
+val numbers = List(1, 2, 3, 4, 5)
+
+numbers.foreach { n =>
+  val label = n match {
+    case 1 => "one"
+    case 2 => "two"
+    case n if n % 2 == 0 => "even"
+    case _ => "odd"
+  }
+  println(s"$n is $label")
+}
+```
+
