--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -472,3 +472,222 @@ numbers.foreach { n =>
 }
 ```
 
+---
+
+You're right, I apologize — my previous response was just repeating itself. The exercise answer was already complete. Let's keep moving!
+
+---
+
+# Case Classes and OOP in Scala
+
+## What is a Case Class?
+
+A case class is Scala's most used data structure for modeling data. Think of it like a **Python dataclass or namedtuple** — but with superpowers built in.
+
+```scala
+// Python dataclass equivalent
+# Python
+from dataclasses import dataclass
+
+@dataclass
+class Transaction:
+    id: str
+    amount: float
+    status: str
+
+# Scala equivalent
+case class Transaction(id: String, amount: Double, status: String)
+```
+
+One line in Scala gives you a lot for free:
+- A constructor
+- Getters for all fields
+- `toString` method
+- `equals` and `hashCode`
+- `copy` method
+- Pattern matching support
+
+---
+
+## Creating and Using Case Classes
+
+```scala
+case class Transaction(id: String, amount: Double, status: String)
+
+// Creating instances — no "new" keyword needed
+val t1 = Transaction("T001", 5000.00, "approved")
+val t2 = Transaction("T002", 15000.00, "flagged")
+
+// Accessing fields
+println(t1.id)      // T001
+println(t1.amount)  // 5000.0
+println(t1.status)  // approved
+
+// toString is automatic
+println(t1)  // Transaction(T001,5000.0,approved)
+```
+
+---
+
+## The copy() Method
+
+This is huge in data engineering. Since case classes are immutable, `copy()` lets you create a modified version without changing the original:
+
+```scala
+val t1 = Transaction("T001", 5000.00, "pending")
+
+// Create new transaction with only status changed
+val t2 = t1.copy(status = "approved")
+
+println(t1)  // Transaction(T001,5000.0,pending)   — unchanged
+println(t2)  // Transaction(T001,5000.0,approved)  — new copy
+```
+
+This immutability pattern is exactly how Spark handles data — never modify, always create new.
+
+---
+
+## Regular Classes vs Case Classes
+
+Scala also has regular classes for when you need behavior and logic, not just data:
+
+```scala
+// Regular class — for behavior and logic
+class TransactionProcessor(threshold: Double) {
+  
+  def isHighRisk(t: Transaction): Boolean = {
+    t.amount > threshold
+  }
+  
+  def process(t: Transaction): String = {
+    if (isHighRisk(t)) s"${t.id} flagged for review"
+    else s"${t.id} processed normally"
+  }
+}
+
+// Using it
+val processor = new TransactionProcessor(10000.00)  // note: needs "new"
+val t1 = Transaction("T001", 15000.00, "approved")
+
+println(processor.process(t1))  // T001 flagged for review
+```
+
+The rule of thumb is simple — **case class for data, regular class for behavior**.
+
+---
+
+## Traits — Scala's Version of Interfaces
+
+Traits are like Java interfaces but more powerful. They define shared behavior across multiple classes:
+
+```scala
+// Define the trait
+trait Auditable {
+  def auditLog(): String
+}
+
+trait Serializable {
+  def toJson(): String
+}
+
+// Case class implementing traits
+case class Transaction(id: String, amount: Double, status: String) 
+  extends Auditable with Serializable {
+  
+  def auditLog(): String = 
+    s"Transaction $id for $$$amount was $status"
+  
+  def toJson(): String = 
+    s"""{"id":"$id","amount":$amount,"status":"$status"}"""
+}
+
+val t1 = Transaction("T001", 5000.00, "approved")
+println(t1.auditLog())  // Transaction T001 for $5000.0 was approved
+println(t1.toJson())    // {"id":"T001","amount":5000.0,"status":"approved"}
+```
+
+---
+
+## Putting It All Together — A Mini Pipeline
+
+Here's a realistic example combining everything we've covered so far:
+
+```scala
+// Data model
+case class Transaction(
+  id: String, 
+  amount: Double, 
+  category: String, 
+  country: String
+)
+
+// Processor class with business logic
+class RiskEngine(highAmountThreshold: Double) {
+
+  def classify(t: Transaction): String = t match {
+    case Transaction(_, amount, _, country) 
+      if amount > highAmountThreshold && country != "US" =>
+        "HIGH RISK"
+    case Transaction(_, _, "gambling", _) =>
+        "MEDIUM RISK"
+    case Transaction(_, _, _, country) if country != "US" =>
+        "LOW RISK"
+    case _ => 
+        "NORMAL"
+  }
+
+  def processAll(transactions: List[Transaction]): List[String] = {
+    transactions
+      .map(t => s"${t.id}: ${classify(t)}")
+  }
+}
+
+// Run it
+val transactions = List(
+  Transaction("T001", 75000.00, "wire",     "UK"),
+  Transaction("T002", 500.00,   "gambling", "US"),
+  Transaction("T003", 1200.00,  "retail",   "CA"),
+  Transaction("T004", 45.00,    "grocery",  "US")
+)
+
+val engine = new RiskEngine(50000.00)
+engine.processAll(transactions).foreach(println)
+```
+
+Output:
+```
+T001: HIGH RISK
+T002: MEDIUM RISK
+T003: LOW RISK
+T004: NORMAL
+```
+
+This is essentially a simplified version of what Capital One's fraud detection pipelines do at scale — just with Spark distributing it across billions of records.
+
+---
+
+## Quick Exercise
+
+Given this code, what is the output?
+
+```scala
+case class Employee(name: String, role: String, salary: Double)
+
+val employees = List(
+  Employee("Alice", "Engineer",  95000.00),
+  Employee("Bob",   "Manager",   120000.00),
+  Employee("Carol", "Engineer",  98000.00),
+  Employee("Dave",  "Analyst",   75000.00)
+)
+
+val result = employees
+  .filter(e => e.role == "Engineer")
+  .map(e => e.copy(salary = e.salary * 1.10))
+  .map(e => s"${e.name}: $${e.salary}")
+
+result.foreach(println)
+```
+
+---
+
+
